# vantalock

./: .gitignore  CMakeLists.txt  README.md
pam/: vantalock
shaders/: overlay.frag  overlay.vert  present.frag
src/: auth.cpp  auth.h  cm_tag.cpp  cm_tag.h  config.cpp  config.h  hdr_image.cpp  main.cpp  overlay_text.cpp  overlay_text.h  renderer.cpp  renderer.h  session_lock.cpp  session_lock.h
